Adding site feature list
